--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>Hello,world!</h1>
-  <p>欢迎访问我的主页：<a href="mainDirectory/mainPage.html">逗比</a></p>
+  <p>欢迎访问我的主页：<a href="mainDirectory/homePage.html">逗比</a></p>
   <p>Another paragraph!  Maybe more text!</p>
 </body>
 </html>
