--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 </head>
 <body>
-  <h1>Hello,world!</h1>
-  <p>欢迎访问我的主页：<a href="mainDirectory/homePage.html">逗比</a></p>
-  <p>Another paragraph!  Maybe more text!</p>
+  <h3>Hello,world!</h3>
+  <p>欢迎访问我的主页：<a href="mainDirectory/homePage.html">我是逗比</a></p>
+  <p>还可以访问我的文章列表：</p>
+# <a href="secDirectory/how.html">如何成为一个逗比</a>
+# <a href="secDerectory/what.html">让我告诉你什么才是真正的逗比</a>
+# <a href="thrDerectory/why.html">十个原因告诉你：你为何没我逗</a>
 </body>
 </html>
