--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
 # <a href="secDirectory/how.html">如何成为一个逗比</a>
 # <a href="secDirectory/what.html">让我告诉你什么才是真正的逗比</a>
 # <a href="thrDirectory/why.html">十个原因告诉你：你为何没我逗</a>
+
+<h3>Github for windows入门指南</h3>
+  <p>1. 安装,打开软件，遇到要登录或设置帐号，帐号就是qiujingshui如果不行就是你的邮箱，密码就是登录密码</p>
+  <p>2. 在d:盘路径下创建一个文件夹，可以命名为github：d:/github</p>
+  <p>3. 到你的项目路径下<a href="https://github.com/qiujingshui/qiujingshui.github.io">https://github.com/qiujingshui/qiujingshui.github.io</a>在右下角找到“clone in Desktop”并点击，将这个项目clone到本地，系统会自动弹出安装好的软件，将路径设置为刚刚创建的 d:/github， 确认之后开始下载项目到本地，这样clone就完成了</p>
 </body>
 </html>
